--- a/app/routes/camera/camera.scss
+++ b/app/routes/camera/camera.scss
@@ -5,6 +5,15 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+
+  &:after {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    box-shadow: inset 0px 0px 291px 50px $color-black;
+    height: 100%;
+  }
 }
 .camera-stream {
   /* Make video to at least 100% wide and tall */
@@ -15,9 +24,9 @@
   width: auto;
   height: auto;
 
-  /* Center the video */
+  /* Center & flip the video */
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%) scaleX(-1);
 }
